--- a/css/style.css
+++ b/css/style.css
@@ -4,7 +4,7 @@
 }
 body {
   margin: 0 auto;
-  background: rgb(51, 51, 51);
+  background: #fafafa;
   max-width: 1000px;
 }
 header {
@@ -203,4 +203,80 @@ header {
   font-family: "Georgia";
   color: rgb(31, 33, 44);
   line-height: 1;
+}
+footer {
+  background-color: rgb(238, 238, 238);
+  height: 260px;
+  display: flex;
+  padding-left: 10px;
+  padding-right: 10px;
+}
+footer > div {
+  width: 225px;
+  flex-grow: 1;
+  padding-left: 10px;
+  padding-right: 10px;
+}
+footer > div > span:nth-child(2) {
+  font-size: 12px;
+  font-family: "Georgia";
+  color: rgb(124, 124, 124);
+  line-height: 1.6;
+}
+footer > div > a {
+  text-decoration: none;
+  font-size: 12px;
+  font-family: "Georgia";
+  color: rgb(31, 35, 44);
+  line-height: 1.2;
+}
+#read_more {
+  font-size: 12px;
+  font-family: "Georgia";
+  color: rgb(31, 35, 44);
+  line-height: 1.2;
+  text-decoration: none;
+}
+.title_footer {
+  font-size: 18px;
+  font-family: "Georgia";
+  color: rgb(44, 44, 44);
+  line-height: 1.2;
+  margin-top: 50px;
+  display: block;
+  margin-bottom: 30px;
+}
+.newsletter > input {
+  background-color: rgb(255, 255, 255);
+  height: 31px;
+  border-radius: 6px;
+  border: none;
+  width: 205px;
+  margin-bottom: 10px;
+  padding-left: 10px;
+  padding-right: 10px;
+}
+.newsletter > button {
+  background-color: rgb(31, 35, 44);
+  width: 80px;
+  height: 31px;
+  border-radius: 6px;
+  border: none;
+  color: #fff;
+}
+.copyright {
+  background-color: rgb(31, 35, 44);
+  height: 60px;
+  display: flex;
+  align-items: center;
+  padding-left: 20px;
+  padding-right: 20px;
+}
+.copyright > span {
+  display: block;
+  font-size: 12px;
+  font-family: "Georgia";
+  color: rgb(115, 115, 115);
+  line-height: 1.2;
+  flex-grow: 1;
 }
