исправление ошибок валидации

--- a/css/style.css
+++ b/css/style.css
@@ -53,6 +53,7 @@ header {
   color: rgb(255, 255, 255);
   margin-left: 28px;
   text-decoration: none;
+  line-height: 1;
 }
 .menu > a:hover {
   color: rgb(31, 35, 44);
@@ -90,6 +91,8 @@ header {
   background-color: rgb(17, 19, 26);
   border-radius: 100%;
   cursor: pointer;
+  align-items: center;
+  justify-content: center;
 }
 .fon {
   background: url("../img/fon.jpg");
@@ -147,11 +150,12 @@ header {
   color: rgb(151, 151, 151);
   line-height: 1.6;
 }
-.el_service > span > div {
+.el_service > span > hr {
   width: 77px;
-  height: 2px;
+  height: 1px;
   background-color: rgb(31, 35, 44);
-  margin-bottom: 4px;
+  margin-top: 2px;
+  display: table-caption;
 }
 .el_service > span > span {
   font-size: 20px;
@@ -206,7 +210,7 @@ header {
 }
 footer {
   background-color: rgb(238, 238, 238);
-  height: 260px;
+  height: 270px;
   display: flex;
   padding-left: 10px;
   padding-right: 10px;
